hard-gists/db051ab5105c5af5401aa5ef8739ada9/run.log
=== Docker Run Log for db051ab5105c5af5401aa5ef8739ada9 ===
Started at: Mi 29. Okt 20:31:28 CET 2025

[2025-10-29 20:31:29] START: Running container for db051ab5105c5af5401aa5ef8739ada9
[2025-10-29 20:31:29] SUCCESS: Container 0854dfb5e9c02616735b84f71ec63fb6330e6b7a160c7dfa5e00881997477ed2 started for db051ab5105c5af5401aa5ef8739ada9
=== Container logs for db051ab5105c5af5401aa5ef8739ada9 ===
  File "/snippet.py", line 12
    print 'Callback created'
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for db051ab5105c5af5401aa5ef8739ada9 ===
[2025-10-29 20:31:31] INFO: Container 0854dfb5e9c02616735b84f71ec63fb6330e6b7a160c7dfa5e00881997477ed2 has stopped
